Added database using EF

--- a/src/PMS.Api/appsettings.json
+++ b/src/PMS.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "server=(localdb)\\mssqllocaldb;database=PMS_DB;trusted_connection=true;"
+  },
+
   "AllowedHosts": "*"
 }
