Implemented Jwt, Added jwt authorization to Login,GetAccount methods in AccountController

--- a/src/PMS.Api/appsettings.json
+++ b/src/PMS.Api/appsettings.json
@@ -10,5 +10,11 @@
     "DefaultConnection": "server=(localdb)\\mssqllocaldb;database=PMS_DB;trusted_connection=true;"
   },
 
+  "JWT": {
+    "Issuer": "https://localhost:7106",
+    "Key": "secretXD!t#s@@01x",
+    "ExpiryMinutes": 30
+  },
+
   "AllowedHosts": "*"
 }
