set kestrel endpoint on localhost:7106

--- a/src/PMS.Api/appsettings.json
+++ b/src/PMS.Api/appsettings.json
@@ -16,5 +16,13 @@
     "ExpiryMinutes": 30
   },
 
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "https://localhost:7106"
+      }
+    }
+  },
+
   "AllowedHosts": "*"
 }
