--- a/src/PMS.Api/PMS.Api.csproj
+++ b/src/PMS.Api/PMS.Api.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\PMS.Infrastructure\PMS.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middleware\" />
+  </ItemGroup>
+
 </Project>
