--- a/tests/PMS.Core.Tests/PMS.Core.UnitTests.csproj
+++ b/tests/PMS.Core.Tests/PMS.Core.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\PMS.Infrastructure\PMS.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\PMS.Core\PMS.Core.csproj" />
   </ItemGroup>
 
 </Project>
