--- a/tests/PMS.Infrastructure.Tests/PMS.Infrastructure.UnitTests.csproj
+++ b/tests/PMS.Infrastructure.Tests/PMS.Infrastructure.UnitTests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -22,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\PMS.Core\PMS.Core.csproj" />
+    <ProjectReference Include="..\..\src\PMS.Infrastructure\PMS.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
