Created simple middleware

--- a/tests/PMS.Infrastructure.Tests/PMS.Infrastructure.UnitTests.csproj
+++ b/tests/PMS.Infrastructure.Tests/PMS.Infrastructure.UnitTests.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\..\src\PMS.Infrastructure\PMS.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="RepositoryTests\" />
+  </ItemGroup>
+
 </Project>
